[master] update swagger
